[metadata]
name = heater
version = 2014.1
summary = Heat Template Repository
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    heater
scripts =
    bin/heater-api

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = heater/locale
domain = heater

[update_catalog]
domain = heater
output_dir = heater/locale
input_file = heater/locale/heater.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = heater/locale/heater.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
