[metadata]
name = fusion
version = 2014.1
summary = Heat Template Repository
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    fusion
scripts =
    bin/fusion-api

[global]
setup-hooks =
    pbr.hooks.setup_hook

[compile_catalog]
directory = fusion/locale
domain = fusion

[update_catalog]
domain = fusion
output_dir = fusion/locale
input_file = fusion/locale/fusion.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fusion/locale/fusion.pot

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
